--- a/my-first-bonus2.html
+++ b/my-first-bonus2.html
@@ -7,6 +7,11 @@
 </head>
 
 <body>
+    <center>
+        <div style="background: #FFFFFF;
+        background: -moz-linear-gradient(top, #FFFFFF 0%, #2388CB 0%, #FFFFFF 100%);
+        background: -webkit-linear-gradient(top, #FFFFFF 0%, #2388CB 0%, #FFFFFF 100%);
+        background: linear-gradient(to bottom, #FFFFFF 0%, #2388CB 0%, #FFFFFF 100%);">
   <!-- Headline -->
   <h1>Malcolm!</h1>
   <!-- Image -->
@@ -36,7 +41,7 @@
       <tfoot>
         <tr>
           <td colspan="3">
-              <a href="file:///C:/Users/edwar/OneDrive/Documents/HTML/index.html" target="_self">Home</a>
+              <center> <a href="file:///C:/Users/edwar/OneDrive/Documents/HTML/index.html" target="_self">Home</a></center>
           </td>
           
           </tr>
@@ -45,7 +50,8 @@
   <!-- Link with New Tab -->
 
   <br>
-
+</div>
+</center>
 </body>
 
 </html>
