--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <center>
     <div style="background: #FFFFFF;
-    background: -moz-linear-gradient(top, #FFFFFF 0%, #2388CB 0%, #FFFFFF 100%);
+    background: -moz-linear-gradient(top, #FFFFFF 0%, rgb(128, 131, 133) 0%, #FFFFFF 100%);
     background: -webkit-linear-gradient(top, #FFFFFF 0%, #2388CB 0%, #FFFFFF 100%);
     background: linear-gradient(to bottom, #FFFFFF 0%, #2388CB 0%, #FFFFFF 100%);">
     <div id="demo">
